# HiraConf

./: README.md  pyproject.toml
examples/: multi_file_example.py  parser_example.py
examples/configs/: default.yaml  global.yaml  workspace.toml
hiraconf/: provider.py
src/hiraconf/: parser.py  provider.py
tests/: test_parser.py  test_provider.py
tests/testfiles/: first.yaml  second.toml
