[tool.poetry]
name = "hiraconf"
version = "0.1.0"
description = ""
authors = ["crxwns"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0.2"
pydantic = "^2.8.2"


[tool.poetry.group.dev.dependencies]
types-pyyaml = "^6.0.12.20240808"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
select = ["ALL"]
ignore = ["D", "RET504", "TRY003", "EM102", "FA102"]

[tool.ruff.extend-per-file-ignores]
"tests/**.py" = ["S101"]
"examples/**.py" = ["INP001"]

[tool.pyright]
typeCheckingMode = "strict"
